Aligned endpoint methods names
